--- a/session.html
+++ b/session.html
@@ -1470,5 +1470,14 @@ if (touch) { // remove all :hover stylesheets
     } catch (ex) {}
 }
 </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src=“https://www.googletagmanager.com/gtag/js?id=UA-45275834-8“></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag(‘js’, new Date());
+
+  gtag(‘config’, ‘UA-45275834-8’);
+</script>
 </body>
 </html>
