GA とプログラム周りの調整

--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
     <![endif]-->
 <!-- googleマテリアルアイコン -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-45275834-8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-45275834-8');
+</script>
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <!-- Navigation
@@ -504,14 +513,5 @@ $('.intro').vegas({
 <script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
 <!--<script type="text/javascript" src="js/contact_me.js"></script>-->
 <script type="text/javascript" src="js/main.js"></script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src=“https://www.googletagmanager.com/gtag/js?id=UA-45275834-8“></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag(‘js’, new Date());
-
-  gtag(‘config’, ‘UA-45275834-8’);
-</script>
 </body>
 </html>
