--- a/session.html
+++ b/session.html
@@ -36,6 +36,15 @@
     <![endif]-->
 <!-- googleマテリアルアイコン -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-45275834-8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-45275834-8');
+</script>
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <!-- Navigation
@@ -779,7 +788,7 @@
                     </tbody>
                 </table>
             </div>
-            <div id="session29" class="container">
+            <div id="session30" class="container">
                 <div class="session_header">
                     <div class="session_title">チャレンジ！オープンガバナンス！！本当に食べてていいランチセッション☆</div>
                     <span class="syubetsu_tag presen">プレゼン</span>
@@ -796,7 +805,7 @@
                             <div class="chair_row">
 
                                 <div class="session_chair_detail">
-                                    <img src="authors/29_1.jpg"><span class="name_txt">奥村 美佳</span>
+                                    <img src="authors/30_1.jpg"><span class="name_txt">奥村 美佳</span>
                                 </div>
 
                                 <div class="session_chair_detail">
@@ -810,8 +819,8 @@
                         <th>概要</th>
                         <td class="txt detail">
                             <div class="grad-wrap">
-                                <input id="trigger29" class="grad-trigger" type="checkbox">
-                                <label class="grad-btn" for="trigger29"></label>
+                                <input id="trigger30" class="grad-trigger" type="checkbox">
+                                <label class="grad-btn" for="trigger30"></label>
                                 <div class="grad-item">今年で4回目の開催となる「チャレンジ！オープンガバナンス！！（COG2019）」運営コーディネーターの奥村裕一先生とゆかいな仲間たちによる、本当にもぐもぐしていいランチセッションです。あなたも楽しくオープンガバナンスにチャレンジしてみませんか？</div>
                         </td>
                     </tr>
@@ -1223,7 +1232,7 @@
                     </tbody>
                 </table>
             </div>
-            <div id="session28" class="container">
+            <div id="session29" class="container">
                 <div class="session_header">
                     <div class="session_title">しあわせシビックテック～保育士とみんなでできること～</div>
                     <span class="syubetsu_tag presen">プレゼン</span>
@@ -1240,7 +1249,7 @@
                             <div class="chair_row">
 
                                 <div class="session_chair_detail">
-                                    <img src="authors/28_1.jpg"><span class="name_txt">奥村 美佳</span>
+                                    <img src="authors/29_1.jpg"><span class="name_txt">奥村 美佳</span>
                                 </div>
 
                                 <div class="session_chair_detail">
@@ -1254,8 +1263,8 @@
                         <th>概要</th>
                         <td class="txt detail">
                             <div class="grad-wrap">
-                                <input id="trigger28" class="grad-trigger" type="checkbox">
-                                <label class="grad-btn" for="trigger28"></label>
+                                <input id="trigger29" class="grad-trigger" type="checkbox">
+                                <label class="grad-btn" for="trigger29"></label>
                                 <div class="grad-item">しあわせって何だろう～？シビックテック活動と保育士コミュニティ運営から見えてきたことと、意外に知られていない、保育士の仕事って何しているの？の二本立てでお話します♪参加者のみなさんと意見をシェアする時間もあります。喋り足りない方、休憩したい方、のんびりやりますのでどうぞお越しやす～。</div>
                         </td>
                     </tr>
@@ -1469,15 +1478,6 @@ if (touch) { // remove all :hover stylesheets
         }
     } catch (ex) {}
 }
-</script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src=“https://www.googletagmanager.com/gtag/js?id=UA-45275834-8“></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag(‘js’, new Date());
-
-  gtag(‘config’, ‘UA-45275834-8’);
 </script>
 </body>
 </html>
