アプリバナー追加

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                       <p class="event-name-col">CODE <span style="font-weight:100;">for</span> JAPAN SUMMIT <span style="color:#fcee21;">2019</span></p>
                       <p class="event-date-row">2019.9.28(sat.)-29(sun.)<br><span style="font-size:0.8em;">＠ 神田外語大学</span></p>
                       <p class="event-date-col">2019.9.28(sat.)-29(sun.)　<span style="font-size:0.8em;">＠ 神田外語大学</span></p>
-                  </div>
+                      <p class="app_dl"><a href="https://apps.apple.com/app/id1464997175" target="_blank"><img src="img/banner-appstore.png" style="height:40px; width:auto; margin-right:10px;" alt="App Storeからアプリをダウンロード"></a><a href="https://play.google.com/store/apps/details?id=org.code4nerima.c4js" target="_blank"><img src="img/banner-google-play.png" style="height:40px; width:auto;" alt="Google Playからアプリをダウンロード"></a></p>                  </div>
                 </div>
              </div>
            </div>
