登壇者写真追加

--- a/session.html
+++ b/session.html
@@ -1425,7 +1425,7 @@
                                 </div>
 
                                 <div class="session_chair_detail">
-                                    <div class="session_chair_imgbox"></div>
+                                    <div class="session_chair_imgbox" style="background-image: url(authors/14_4.jpg)"></div>
                                     <span class="name_txt">柳田 香</span>
                                 </div>
 
