基調講演対応

--- a/session.html
+++ b/session.html
@@ -107,10 +107,13 @@
               <span style="font-size:0.8em; display:inline-block; background:#2f94a9; text-align:center; padding:0 5px; color:#fff;">プレゼン</span>：プレゼンテーション
           </p>
           <p>
-          <span style="font-size:0.8em; display:inline-block; background:#ff4b00; text-align:center; padding:0 5px; color:#fff;">パネル</span>：パネルディスカッション
+              <span style="font-size:0.8em; display:inline-block; background:#ff4b00; text-align:center; padding:0 5px; color:#fff;">パネル</span>：パネルディスカッション
           </p>
           <p>
-          <span style="font-size:0.8em; display:inline-block; background:#1e1c4d; text-align:center; padding:0 5px; color:#fff;">その他</span>：その他
+              <span style="font-size:0.8em; display:inline-block; background:#e9b6d2; text-align:center; padding:0 5px;  color:#000;">Keynote</span>：基調講演
+          </p>
+          <p>
+              <span style="font-size:0.8em; display:inline-block; background:#1e1c4d; text-align:center; padding:0 5px; color:#fff;">その他</span>：その他
           </p>
         </div>
     </div>
@@ -129,7 +132,7 @@
             <div id="session58" class="container">
                 <div class="session_header">
                     <div class="session_title">市民の力とテクノロジーを組み合わせてコミュニティを作り、まちを変えていく「シビックテクノロジスト」という働き方</div>
-                    <span class="syubetsu_tag presen">プレゼン</span>
+                    <span class="syubetsu_tag key">Keynote</span>
                 </div>
                 <table>
                     <tbody>
