登壇者写真を追加

--- a/session.html
+++ b/session.html
@@ -594,7 +594,7 @@
                             <div class="chair_row">
 
                                 <div class="session_chair_detail">
-                                    <div class="session_chair_imgbox"></div>
+                                    <div class="session_chair_imgbox" style="background-image: url(authors/66_1.jpg)"></div>
                                     <span class="name_txt">田中 駆</span>
                                 </div>
 
